scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/assignmentToVoidZero2.errors.txt
assignmentToVoidZero2.js(12,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== assignmentToVoidZero2.js (1 errors) ====
    exports.j = 1;
    exports.k = void 0;
    var o = {}
    o.x = 1
    o.y = void 0
    o.x + o.y
    
    function C() {
        this.p = 1
        this.q = void 0
    }
    var c = new C()
            ~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    c.p + c.q
    
==== importer.js (0 errors) ====
    import { j, k } from './assignmentToVoidZero2'
    j + k
    